# Clinicaltrial

./: .env.example  .gitignore  Procfile  README.md  SETUP.md  agent_config.yaml  build_curated.py  check_pipeline.py  cleanup_rooms.py  drain_all.py  drain_backlog.py  nixpacks.toml  probe_room.py  pyproject.toml  railway.toml  seed_demo_cache.py  serve_all.py  skills-lock.json  test_analyzer_models.py
data/cache/runs/: P001.json  P002.json  P003.json
data/clinicians/: clinicians.json
data/knowledge/: biomarkers.json
data/patients/: P001_auto_approve.json  P002_auto_reject.json  P003_match.json
data/trials/: curated.json
data/trials/raw/: NCT04360941.json  NCT06157892.json  NCT06207734.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: agents.ts  api.ts  index.css  main.tsx  session.ts  types.ts  vite-env.d.ts
frontend/src/components/: AgentTail.tsx  Brand.tsx  CountUp.tsx  DashboardLayout.tsx  PatientCard.tsx  PipelineProgress.tsx  SavedTrialCard.tsx  TrialCard.tsx
frontend/src/pages/: Applications.tsx  Favorites.tsx  Login.tsx  Match.tsx  Notifications.tsx  Patients.tsx  PreviousRuns.tsx  RunDetail.tsx  SavedSearches.tsx
prompts/: analyzer.md  discoverer.md  intake.md  parser.md
scripts/: start_agents.ps1  start_agents.sh
src/trialsync/: __init__.py  agent_common.py  agent_tools.py  api.py  baseline_matcher.py  brains.py  cli.py  fetch_trials.py  run_agents.py  schema.py
src/trialsync/agents/: __init__.py  analyzer.py  discoverer.py  intake.py  parser.py
