[project]
name = "trialsync"
version = "0.1.0"
description = "TrialSync — data foundation for a multi-agent clinical trial matching system (Stage IV breast cancer)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "langchain-openai>=1.3.2",
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.31",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
trialsync = "trialsync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trialsync"]
